Fix #9590. Fix #9612. For external storage with lots of parameter settings (>4), wrap the content of the cell to let a full view of the parameters. The rows of the table are now always visible until the end (the trash icon is accessible). (Note : A strange 3px margin forces me to add a class on the row added by javascript, to be able to align them with the rows rendered by the server.)

--- a/apps/files_external/css/settings.css
+++ b/apps/files_external/css/settings.css
@@ -10,7 +10,19 @@ td.remove>img { visibility:hidden; padding-top:7px; }
 tr:hover>td.remove>img { visibility:visible; cursor:pointer; }
 #addMountPoint>td { border:none; }
 #addMountPoint>td.applicable { visibility:hidden; }
-#selectBackend { margin-left:-10px; }
+
+#selectBackend {
+	margin-left:-10px; 
+	width : 150px; 
+}
+
+#externalStorage td.configuration, #externalStorage td.backend {
+	white-space : normal;
+}
+
+#externalStorage td.configuration input.added  {
+	margin-right : 6px;
+}
 
 #externalStorage label > input[type="checkbox"] {
 	margin-right: 3px;
